# IBiDAV

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.sh  README.md  main.py  pyproject.toml
.github/workflows/: search-quality.yml
ibidav/: __init__.py  build_artifacts.py  label_classifier.py  main.py  nlp_processor.py  semantic_ranker.py  semantic_topics.py  service.py
ibidav/static/: app.js  styles.css
ibidav/templates/: index.html
scripts/: README.md  __init__.py  discover_topics.py  evaluate_search_quality.py  monitor_label_quality.py  prepare_training_data.py  test_search_quality.py  train_label_classifier.py  train_semantic_topics.py  upgrade_nlp.py  validate_data_quality.py
